--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.myRetail</groupId>
-	<artifactId>products</artifactId>
+	<groupId>com.myretail</groupId>
+	<artifactId>products-v1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
-	<name>mRC-manage-products</name>
+	<name>MyRetail-Products-v1</name>
 	<description>manage products</description>
 
 	<parent>
