--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ##### External API details #########
-rest.endpoint=http://redsky.target.com/v2/pdp/tcin/
+rest.endpoint=http://redsky.target.com/v2/pdp/tcin/13860428?excludes=promotion,bulk_ship,available_to_promise_network,question_answer_statistics,rating_and_review_statistics,rating_and_review_reviews,deep_red_labels,price
 
 ############ Spring Framework ##############
 server.port=11080
